--- a/src/main/resources/templates/note/notes.html
+++ b/src/main/resources/templates/note/notes.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<link rel="stylesheet" type="text/css" th:href="@{css/notes.css}">
+<link rel="stylesheet" type="text/css" th:href="@{css/enseignants.css}">
 <link rel="stylesheet" type="text/css" th:href="@{css/header.css}">
 <meta charset="ISO-8859-1">
 <title>liste notes</title>
 </head>
 <body>
 	<header th:insert="@{ressource/headerNav}"></header>
-	<div>
-		<input type="button" onclick="location.href='ajouterNote';" value="ajouter une note" class="lien"/>
-		<input type="button" onclick="location.href='notesDiff';" value="eleve en difficulte" class="lien"/>
-	</div>
 	<div>
 		<table>
 			<tr th:class="beta">
@@ -25,6 +21,10 @@
 				<td th:text="${note.note}"></td>
 			</tr>
 		</table>
+	</div>
+	<div>
+		<input type="button" onclick="location.href='ajouterNote';" value="ajouter une note" class="lien"/>
+		<input type="button" onclick="location.href='notesDiff';" value="eleve en difficulte" class="lien"/>
 	</div>
 	<script type="text/javascript" th:src="@{js/notes.js}"></script>
 </body>
