fix mauvaise pratique

--- a/src/main/resources/templates/enseignant/ajouterEnseignant.html
+++ b/src/main/resources/templates/enseignant/ajouterEnseignant.html
@@ -26,7 +26,7 @@
 			</div>
 			<div class="blocValeur">
 				<label for="dateNaissance">date de naissance : </label> <input
-					type="text" th:field="*{dateNaissance}" id="dateNaissance"
+					type="date" th:field="*{dateNaissance}" id="dateNaissance"
 					name="dateNaissance" placeholder="date naissance" />
 			</div>
 			<div class="blocValeur">
@@ -39,7 +39,7 @@
 					th:field="*{grade}" id="grade" placeholder="grade" />
 			</div>
 			<div class="blocValeur">
-				<label for="dateEmbauche">date embauche :</label> <input type="text"
+				<label for="dateEmbauche">date embauche :</label> <input type="date"
 					th:field="*{dateEmbauche}" id="dateEmbauche"
 					placeholder="date embauche" />
 			</div>
