--- a/src/main/resources/templates/etudiant/ajouterEtudiant.html
+++ b/src/main/resources/templates/etudiant/ajouterEtudiant.html
@@ -26,7 +26,7 @@
 			</div>
 			<div class="blocValeur">
 				<label for="dateNaissance">date de naissance : </label> <input
-					type="text" th:field="*{dateNaissance}" id="dateNaissance"
+					type="date" th:field="*{dateNaissance}" id="dateNaissance"
 					name="dateNaissance" placeholder="date naissance" />
 			</div>
 			<div class="blocValeur">
