--- a/src/main/resources/templates/ressource/headerNav.html
+++ b/src/main/resources/templates/ressource/headerNav.html
@@ -6,7 +6,7 @@
 		<input type="button" onclick="location.href='enseignants';" value="enseignants" class="lien"/>
 		<input type="button" onclick="location.href='etudiants';" value="etudiants" class="lien"/>
 		<input type="button" onclick="location.href='matieres';" value="matieres" class="lien"/>
-		<input type="button" onclick="location.href='notes';" value="notes" class="lien"/>
+		<input type="button" onclick="location.href='notes?page=1';" value="notes" class="lien"/>
 	
 </div>
 <br/>
